gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: servicea-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: servicea
spec:
  hosts:
  - "*"
  gateways:
  - servicea-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: servicea
        port:
          number: 8081
